--- a/用語/用語.md
+++ b/用語/用語.md
@@ -25,6 +25,8 @@ BNFの基本的な意味
 BNFは、言語の文法規則を定義するための一種のフォーマットで、「どのような文字や記号の並びが正しいか」を形式的に表現します。
 ### スタックの考え方
 [詳細はこちら](./スタックの考え方.md)
+### RAID0
+複数のディスクに分散してデータを書き込む（ストライピング）
 ### RAID1
 RAID 1では、データを2つ以上のディスクに同時に書き込みます。つまり、ディスクAに書き込んだデータは、同時にディスクBにもコピーされます。このため、2つのディスクに全く同じデータが保存される状態（ミラーリング）が実現されます。
 ### RAID 2
@@ -72,3 +74,44 @@ YesもNoを通るようにする
 呼び出す側をダミーにする
 下位ダミー
 ### 受け入れテスト
+
+## PMBOK
+### 統合
+全体の調整
+### ステークホルダー
+利害関係者
+### スコープ
+作業範囲を明確化すること。WBSを作る
+### 資源
+人月　作業のボリューム　
+工数　→人月　期間→開発期間
+### 時間
+クリティカルパス　最も遅いところ
+プロジェクトの開始が〇日目で到達が変わる
+アローダイアグラムの問題が多い
+余裕があるの考え方　他のクリティカルパスとの差分を見て、いったん余裕文を足して計算してみる
+
+最早開始日　すぐ時間かけて作業を始める　最も早く作業を開始できる
+最遅開始日　リミットを考慮しての余裕日があり、早く来ても待機できる
+
+### CIO
+経営戦略実現のために関して情報戦略を提言する役員
+
+## ITポートフォリオ
+目的やリスク毎にカテゴリー化し投資割合を決める。戦略目標達成、業務目標効率化、インフラ構築
+## エンタープライズアーキテクチャ
+組織全体の最適化のためにどのようにシステムの設計と管理をしていくか
+## SRAM
+「フリップフロップ」と呼ばれる回路を使って、データを常に保持します。この回路は電源が供給されている間、データを固定した状態で保持し続けます。SRAMは高速でリフレッシュが不要なメモリですが、大容量化が難しくコストが高いという特徴があります。
+
+## 稼働率
+並列接続どちらか一方可動　1-(1-R)^台数分
+直接接続　全て　R^台数分
+
+## マルウェアの解析手法
+* 動的解析
+サンドボックス(他に影響を与えない隔離された環境)上で検体を実際に動作させてその挙動を監視し、マルウェアの動作を解析すること
+* 静的解析
+検体の実行可能形式ファイルを逆コンパイル(ソースコードに還元する処理)し、そのソースコードを直接読むことで、マルウェアがどのような動作をするか解析すること
+* 検知
+検体のハッシュ値を検出しそれがオン臨場で登録されているマルウェアのハッシュ値と同じか見る→コンペア法
