--- a/用語/用語.md
+++ b/用語/用語.md
@@ -190,3 +190,109 @@ RFP 提案依頼書作成 Request for proposal
 ### リスト
 単方向リスト　次のポインターを覚えておく
 双方向リスト　前と次のポインターを覚えておく
+
+### キュー
+到着した順に出ていく。待ち行列　ファーストインファーストアウト　FIFO
+### スタック
+最後に到着したものから出ていく ラストインファーストアウト
+途中で取り出すことでいろいろな取り出し方がある。
+
+## ツリー構造
+親の下に子がいる
+### ノード（節）
+一つ一つの要素のこと
+### ルート（根）
+先頭の要素
+### リーフ（葉）
+末尾の要素
+### 枝
+ノードをつなぐ線
+### 2分木
+枝がに分岐以下
+#### 二分探索木
+ 左　＜　自分　＜右　で設定する
+
+## 探索ある誤ズム
+ ### 線形探索
+ 最初から一つずつ探していく
+ 平均探索回数　（最小探索回数最 + 大検索回数）/2
+ 探索時間は表全体の大きさにほぼ比例
+
+ ### 二分探索
+ 大きさ順に並んでいる
+ 何中から調べる
+ 平均探索回数　log2全体の個数
+
+ ### ハッシュ法
+シノニム衝突　かぶっていたら
+平均探索回数1
+関数地によって格納場所を決める
+
+## 整列アルゴリズム
+### バブルソート
+隣の自分の大きさと比較してみていく
+右側が一番大きい数値。だんだん見ていく回数が減っていく
+### 選択ソート
+最小の値を探してみ整列の先頭()と交換
+### 挿入ソート
+み整列のデータをすでに整列されているところに挿入していく
+### シェルソート
+ある一定の間隔を決めて、入れ替えていく。一巡したら間隔を狭める
+### クイックソート
+基準値を決めて大きいグループと小さいグループに分けて入れ替える。
+一巡したら、分けたグループ内で基準値を決めて入れ替える。
+今のところ一番早いといわれている
+### マージソート
+始めは一つに分割し、次に隣のものとマージして結合して、その中で整列させる。
+次にまたマージして整列を繰り返す。
+### ヒープソート
+ツリー形式で親が一番大きくて子が小さい。二分探索木と異なり、右が一番大きいではない。
+一巡すると葉から一個親にして、大きさを見て、を繰り返す。
+
+## クラス
+設計図
+### オブジェクト
+クラスを実体化したもの
+### インスタンス
+クラスの定義に基づいてインスタンスが生成
+### 属性
+情報
+### メソッド
+操作　オブジェクトのふるまい
+### geter seter
+データを挿入するとき取り出すときは直接アクセスするのではなくクラス内でアクセスするようにする。
+必ず一か所経由するようにする
+### カプセル化
+オブジェクトの内部構造が変更されても利用者がその影響を受けない
+属性とメソッドを1つのオブジェクトとする
+### インヘリタンス（継承）
+共通化するものを一つにまとめる
+#### オーバーライド親クラスのものを上書する
+#### 基底クラス 親クラス
+## ポリモーフィズム
+異なる型のオブジェクトが同じメソッドを持っていても、その振る舞いはオブジェクトの型によって変わります
+## プログラミングについて
+### リロケータブル(再配置可能)
+どこにおいても実行できる
+### リエントラント　再入可能
+複数の呼び出し元から同時に呼ばれても問題ない
+### リユーザブル 再使用可能
+一度ロードしたプログラムを再実行できる
+実行の初めに初期化し、終了したら初期状態にする
+### リカーシブ 再帰
+自分を読んでもよい
+
+
+## 2進数から10進数
+桁に対して2の累乗にする 0のところは考慮しない　0始まり。
+1001 => 2^0 +　2^3
+小数は-乗　1/2 1/4 1/8
+### ビット
+1つのけたのこと
+### バイト
+8ビット
+### 桁
+ミーのマイクなのぴー
+小さい　ミリ　＞　マイクロ　＞　ナノ　＞　ピノ
+
+大きい　キロ　＜　メガ　＜　ギガ　＜テラ
