--- a/用語/用語.md
+++ b/用語/用語.md
@@ -296,3 +296,131 @@ RFP 提案依頼書作成 Request for proposal
 小さい　ミリ　＞　マイクロ　＞　ナノ　＞　ピノ
 
 大きい　キロ　＜　メガ　＜　ギガ　＜テラ
+
+10進数から二進数　
+下から読む
+余りを出していく。最後0になるまで行う
+しょう数点の時はかける2で上から読む
+無限小数も存在する
+16進数　10真から16進数は16で割って余りを見る
+　　　　小数は16をかける
+　　　　16進数から10進数は 1, 16 256 といった数値を10しんの数値で書ける
+マイナス表記
+八ビットを反転させて1を足す
+反転させる　1の補数
+反転させて1を足す　2の補数
+マイナス扱うという問題なら先頭を見る　
+1. 先頭が1だったらマイナス表記。
+2. の補数を引く。
+3.  反転
+  オール1はマイナスとする
+
+### 算術シフト
+#### 左シフト　0を下に追加する
+マイナスの時　左の1はそのままで0繰り上げる
+#### 右シフト
+最上位シフトのものを左に追加する
+#### オーバーフロー
+シフトした時に左のに文字が同じではない時発生
+#### 16進数のシフト演算
+10進数に直す　4ビットづつで二進数にする　シフト演算する
+
+### 小数点
+#### 固定小数
+下位2ビットは小数として扱うといった感じで小数点を二進数であらわす。
+#### 浮動小数
+小数点の位置を好きに決められる
+##### 正規化
+一番左端を0にするように10の何乗という形にする。正規化すると何乗形式になるとわかるので回ビットに指数を入れる。マイナスの場合は最上位ビットに1を入れる。
+f * r^e 
+f: 仮数　r: 基数　e: 指数
+最大と言ったら最上位ビットは0でそのほかはオール1を考える
+## 誤差
+### 丸め誤差
+四捨五入した時に発生する誤差
+### 打切り誤差
+コンピューターがこれ以上計算しても意味ないと判断して発生
+### 桁落ち
+近い数値の引き算
+### 情報誤差
+絶対値が大きいほうに合わせる
+### オーバーフロー
+最上位ビットがあふれて入らなくなる
+### アンダーフロー
+指数部に入らなくなる
+
+## 弁図
+### 論理和
+後ろがカーブした図　足し算の記号
+### 論理和の否定
+### 論理積
+面積でかい図　掛け算の記号
+### 論理積の否定
+### 否定
+三角の図　上に棒線
+### 排他的論理和
+論理和の共通している部分がなくなったもの
+### 半加算器と全加算器
+半加算器はキャリー入力を持たず、2つのビットを加算するだけです。
+全加算器はキャリー入力を含む3つの入力を加算でき、次の桁へのキャリー出力も考慮しています。
+半加算器　排他的論理和と論理積を組み合わせる
+
+### ビット操作
+不要なものにマスクをする。消したい部分を0にし欲しい部分は1として論理積を使う
+全ビット反転はオール1にすること→排他的論理和
+
+# パリティビット
+1のこと
+
+## コンピュータの5台装置
+### CPU
+##### クロック
+CPUが作動し振動すること
+##### クロック周波数
+1秒間でどれくらい振動して命令
+Ｈｚが単位。GHzが使われる。→10億Hz
+##### MIPS　ミップス
+100万回を1命令とした単位
+##### クロックサイクル時間
+1クロック当たりの時間。　1秒/ クロック
+##### 命令ミックス
+複数の処理によりCPUの処理能力を計測する
+##### 高速化
+* パイプライン
+  他の処理が停止しないように、他の処理実行中に別の子とする
+* スーパーパイプライン
+  パイプラインを細分化して高速化を図る
+* スーパースカラ
+   複数のパイプラインを用いて同時に複数の命令を実行。
+#### 制御装置　
+* 制御の流れ
+1. 命令を取り出す（フェチ）　主記憶装置から。
+2. 命令をでコードする
+3. オペランドを呼び出す
+4. 目令する
+* プログラムカウンタ
+  アドレスを記憶しておく
+##### レジスタ
+* 汎用レジスタ　いろいろ保存
+* 命令レジスタ　命令を取得保存
+* 命令デコーダー　解読
+* プログラムカウンタ　次の命令のアドレス保存
+* アキュムレータ　演算系の保存
+
+* 即値アドレス指定方式　そのまま使う
+* 直接アドレス指定方式(絶対アドレス方式)　そのままから指定
+* 関節指指定方式　直接アドレス指定の値がアドレス
+* ベースアドレス指定方式　再配置されている　変位がキーワード
+* インデックス指定方式（指標アドレス）　添え字で隣り合っている
+#### 演算装置
+計算する
+### 入力装置
+キーボードとか。データは記憶装置に流す
+### 記憶装置
+命令が取り出される。
+#### 主記憶装置
+メインメモリ　コンピュータに搭載されている
+#### 補助記憶装置
+ハードディスクなど外部のメモリ
+#### 出力装置
+ディスプレイとか
