--- a/用語/用語.md
+++ b/用語/用語.md
@@ -1,91 +1,171 @@
-### DHCP: 
-IPアドレスを自動的に割り当てるプロトコル。
-### NAPT（IPマスカレード）: 
-複数の内部IPを1つの外部IPに変換する技術。
-### PPPoE: 
+### DHCP:
+
+IP アドレスを自動的に割り当てるプロトコル。
+
+### NAPT（IP マスカレード）:
+
+複数の内部 IP を 1 つの外部 IP に変換する技術。
+
+### PPPoE:
+
 認証を含むイーサネット上の接続プロトコル。
-### パケットフィルタリング: 
+
+### パケットフィルタリング:
+
 データパケットを条件に基づいて通過させるかどうかを決定する技術。
+
 ### ディジタル署名のポイント：
+
 署名は君だけが持っている「秘密の鍵」で作られるから、君しかそのサインは作れない。
 公開の鍵はみんなが持っているから、誰でもそのサインが本物かどうか確認できる。
 これによって、インターネットで送られたメッセージが偽物じゃないことを確認できるんだ。
-### DMZ 
-DMZは、外部セグメント（インターネット）と内部セグメント（企業ネットワーク）の間に置かれた領域で、外部からのアクセスが必要なサーバ（例：Webサーバ）が置かれますが、内部ネットワークへの直接のアクセスを制限します。
+
+### DMZ
+
+DMZ は、外部セグメント（インターネット）と内部セグメント（企業ネットワーク）の間に置かれた領域で、外部からのアクセスが必要なサーバ（例：Web サーバ）が置かれますが、内部ネットワークへの直接のアクセスを制限します。
+
 ### サンドボックス
-隔離された仮想環境でファイルを実行して、C&Cサーバへの通信などの振る舞いを監視する。
+
+隔離された仮想環境でファイルを実行して、C&C サーバへの通信などの振る舞いを監視する。
+
 ### SDN（Software-Defined Networking）
-SDNは、ネットワーク機器（ルーター、スイッチなど）の制御を従来のハードウェアから切り離し、ソフトウェアによって集中的に管理するアプローチです。これにより、ネットワーク全体を効率的に構成、管理、変更できるようになります
+
+SDN は、ネットワーク機器（ルーター、スイッチなど）の制御を従来のハードウェアから切り離し、ソフトウェアによって集中的に管理するアプローチです。これにより、ネットワーク全体を効率的に構成、管理、変更できるようになります
+
 ### DPI
-DPIは、パケットの内容を深く解析し、単なるヘッダ情報（IPアドレスやポート番号など）だけでなく、パケットの中身（ペイロード）まで検査して、通信がどのアプリケーションに関連するかを識別します
+
+DPI は、パケットの内容を深く解析し、単なるヘッダ情報（IP アドレスやポート番号など）だけでなく、パケットの中身（ペイロード）まで検査して、通信がどのアプリケーションに関連するかを識別します
+
 ### SMTP-AUTH
-SMTP-AUTHでは、メールを送信する前にユーザーの認証が必要になります。具体的には、ユーザー名とパスワードをメールサーバに送信し、サーバがそれを確認して正しいユーザーであることが認証されてから、メールが送信されます。これにより、認証されたユーザーだけがメールを送信できるようになります。
+
+SMTP-AUTH では、メールを送信する前にユーザーの認証が必要になります。具体的には、ユーザー名とパスワードをメールサーバに送信し、サーバがそれを確認して正しいユーザーであることが認証されてから、メールが送信されます。これにより、認証されたユーザーだけがメールを送信できるようになります。
+
 ### BNF
-BNFの基本的な意味
-BNFは、言語の文法規則を定義するための一種のフォーマットで、「どのような文字や記号の並びが正しいか」を形式的に表現します。
+
+BNF の基本的な意味
+BNF は、言語の文法規則を定義するための一種のフォーマットで、「どのような文字や記号の並びが正しいか」を形式的に表現します。
+
 ### スタックの考え方
+
 [詳細はこちら](./スタックの考え方.md)
+
 ### RAID0
+
 複数のディスクに分散してデータを書き込む（ストライピング）
+
 ### RAID1
-RAID 1では、データを2つ以上のディスクに同時に書き込みます。つまり、ディスクAに書き込んだデータは、同時にディスクBにもコピーされます。このため、2つのディスクに全く同じデータが保存される状態（ミラーリング）が実現されます。
+
+RAID 1 では、データを 2 つ以上のディスクに同時に書き込みます。つまり、ディスク A に書き込んだデータは、同時にディスク B にもコピーされます。このため、2 つのディスクに全く同じデータが保存される状態（ミラーリング）が実現されます。
+
 ### RAID 2
+
 ビット単位のストライピングとハミングコードを使ったエラー訂正。実装が複雑で現在はほとんど使用されない。
+
 ### RAID 3
+
 バイト単位のストライピングと専用パリティディスクを使った構成。連続データ処理には向いているが、パリティディスクがボトルネックになりやすい。
+
 ### RAID 4
-ブロック単位のストライピングと専用パリティディスク。RAID 3に比べてランダムアクセスに向いているが、パリティディスクの負荷が問題となる。
-### RAM: 
+
+ブロック単位のストライピングと専用パリティディスク。RAID 3 に比べてランダムアクセスに向いているが、パリティディスクの負荷が問題となる。
+
+### RAM:
+
 一時的なデータ保存用の揮発性メモリで、読み書き可能。主にメインメモリとして使用。
-### ROM: 
+
+### ROM:
+
 読み出し専用の不揮発性メモリで、システムの基本プログラムを保存。書き換え不可。
-### DRAM: 
-RAMの一種で、安価で高密度な揮発性メモリ。リフレッシュが必要で、主にメインメモリとして使用。
+
+### DRAM:
+
+RAM の一種で、安価で高密度な揮発性メモリ。リフレッシュが必要で、主にメインメモリとして使用。
+
 ### 携帯電話で使用されている音声圧縮技術
-主にAMRやその拡張版であるAMR-WB、最新のEVSなどがあります。これらのコーデックは、限られた帯域幅の中でクリアな音声通信を実現し、ネットワークの状況に応じて音声品質やビットレートを動的に調整することが可能です。また、VoIPやIP電話向けにはG.711やOpusなどが使用されることもあります。
+
+主に AMR やその拡張版である AMR-WB、最新の EVS などがあります。これらのコーデックは、限られた帯域幅の中でクリアな音声通信を実現し、ネットワークの状況に応じて音声品質やビットレートを動的に調整することが可能です。また、VoIP や IP 電話向けには G.711 や Opus などが使用されることもあります。
+
 ### 論理データ構造
+
 お客が分かる言葉で設計する
+
 ### 物理データ構造
+
 プログラムに近い言葉で設計する
-### DFD 
+
+### DFD
+
 入力出力　データフロー　プロセス　データストア
+
 ### オブジェクト図
+
 その時点の値を入力したものを記入する
+
 #### 限界値　境界値
+
 協会の値
+
 ### 同値分割
+
 代表の数値を投入
+
 ### 命令網羅
+
 全ての命令を網羅数るようにする
+
 ### 判定条件網羅（分岐網羅）
-YesもNoを通るようにする
+
+Yes も No を通るようにする
+
 ### 条件網羅
-ぞれが少なくとも1回ずつ真と偽の状態を取るようにテストケースを作成します
+
+ぞれが少なくとも 1 回ずつ真と偽の状態を取るようにテストケースを作成します
+
 ### 複数条件網羅
+
 全てのパターンと組み合わせで作る
+
 ### 有効同値クラス
-クラスは有効となる範囲の1クラス
+
+クラスは有効となる範囲の 1 クラス
+
 ### 境界値
+
 有効だと協会の値で、向こうはギリギリ外れる値
+
 ### ドライバ
+
 呼ぶ側をダミーで作る
 上位をダミー
+
 ### スタブ
+
 呼び出す側をダミーにする
 下位ダミー
+
 ### 受け入れテスト
 
 ## PMBOK
+
 ### 統合
+
 全体の調整
+
 ### ステークホルダー
+
 利害関係者
+
 ### スコープ
-作業範囲を明確化すること。WBSを作る
+
+作業範囲を明確化すること。WBS を作る
+
 ### 資源
+
 人月　作業のボリューム　
-工数　→人月　期間→開発期間
+工数　 → 人月　期間 → 開発期間
+
 ### 時間 タイム
+
 クリティカルパス　最も遅いところ
 プロジェクトの開始が〇日目で到達が変わる
 アローダイアグラムの問題が多い
@@ -95,11 +175,14 @@ YesもNoを通るようにする
 最遅開始日　リミットを考慮しての余裕日があり、早く来ても待機できる
 
 ### コスト
+
 今回の要件で必要になるものを洗い出す。
 見積もりの話　見積もりを出す側
 ファンクションポイントで見積もる
 個数と重みづけ係数をかける　最後に補正係数をかける
+
 ### リスク
+
 チャンス
 活用 100%を目指す
 強化 確率を上げる
@@ -107,13 +190,14 @@ YesもNoを通るようにする
 受容　何もしない
 
 リスク
-回避　確率を0%にする
+回避　確率を 0%にする
 軽減　確率を下げる
 転嫁　第三者に移す
 受容　何もしない
 
 ### 品質
-QCD 
+
+QCD
 　パレート図　二つのグラフで構成
 　ヒストグラム
 　層別　カテゴリーごとに考える
@@ -123,304 +207,697 @@ QCD
 　チェックシート　項目のリスト化
 
 ### 調達
+
 見積もりをもらう
 RFI 情報要求
 RFP 提案依頼書作成 Request for proposal
 
 ### CIO
+
 経営戦略実現のために関して情報戦略を提言する役員
 
-## ITポートフォリオ
+## IT ポートフォリオ
+
 目的やリスク毎にカテゴリー化し投資割合を決める。戦略目標達成、業務目標効率化、インフラ構築
+
 ## エンタープライズアーキテクチャ
+
 組織全体の最適化のためにどのようにシステムの設計と管理をしていくか
+
 ## SRAM
-「フリップフロップ」と呼ばれる回路を使って、データを常に保持します。この回路は電源が供給されている間、データを固定した状態で保持し続けます。SRAMは高速でリフレッシュが不要なメモリですが、大容量化が難しくコストが高いという特徴があります。
+
+「フリップフロップ」と呼ばれる回路を使って、データを常に保持します。この回路は電源が供給されている間、データを固定した状態で保持し続けます。SRAM は高速でリフレッシュが不要なメモリですが、大容量化が難しくコストが高いという特徴があります。
 
 ## 稼働率
-並列接続どちらか一方可動　1-(1-R)^台数分
-直接接続　全て　R^台数分
+
+並列接続どちらか一方可動　 1-(1-R)^台数分
+直接接続　全て　 R^台数分
 
 ## マルウェアの解析手法
-* 動的解析
-サンドボックス(他に影響を与えない隔離された環境)上で検体を実際に動作させてその挙動を監視し、マルウェアの動作を解析すること
-* 静的解析
-検体の実行可能形式ファイルを逆コンパイル(ソースコードに還元する処理)し、そのソースコードを直接読むことで、マルウェアがどのような動作をするか解析すること
-* 検知
-検体のハッシュ値を検出しそれがオン臨場で登録されているマルウェアのハッシュ値と同じか見る→コンペア法
+
+- 動的解析
+  サンドボックス(他に影響を与えない隔離された環境)上で検体を実際に動作させてその挙動を監視し、マルウェアの動作を解析すること
+- 静的解析
+  検体の実行可能形式ファイルを逆コンパイル(ソースコードに還元する処理)し、そのソースコードを直接読むことで、マルウェアがどのような動作をするか解析すること
+- 検知
+  検体のハッシュ値を検出しそれがオン臨場で登録されているマルウェアのハッシュ値と同じか見る → コンペア法
 
 ## トレンドチャート
+
 進捗と予算の消費のグラフ
 
-## EVM 
+## EVM
+
 作業を金銭に置き換えて管理する
+
 ## 親和図法
+
 情報やアイデアをグループ化して整理し、問題の本質を明らかにするための手法
 
 ## サービスマネジメント
-## サービスサポート
-* インシデント管理　 ITサービスの中断や障害（インシデント）が発生した際に、できるだけ早く通常のサービスに復旧させること。 既知の誤り
-* 問題管理　インシデントの根本原因を特定し、同じ問題が再発しないように予防・恒久的な対策を行うこと
-* 構成管理　使用している機器やソフトウェアについて管理しておく
-* 変更管理
-* リリース管理
-## サービスデリバリー
-### サービスレベル管理
-最初に決めたサービスの保障レベル
-### SLA
-  サービスレベルを契約したもの
-### キャパシティ管理
-  最大容量の管理　能力の範囲内に収まっている。常に管理する。
-### 可用性管理　可用性できるだけ動いていること
-  * 可用性　稼働している割合
-  * 信頼性　平均故障間隔
-  * 保守性　回復する能力
 
-### ITサービス継続性管理
-  災害発生時に対応する
-### ITサービス財務管理
+## サービスサポート
+
+- インシデント管理　 IT サービスの中断や障害（インシデント）が発生した際に、できるだけ早く通常のサービスに復旧させること。 既知の誤り
+- 問題管理　インシデントの根本原因を特定し、同じ問題が再発しないように予防・恒久的な対策を行うこと
+- 構成管理　使用している機器やソフトウェアについて管理しておく
+- 変更管理
+- リリース管理
+
+## サービスデリバリー
+
+### サービスレベル管理
+
+最初に決めたサービスの保障レベル
+
+### SLA
+
+サービスレベルを契約したもの
+
+### キャパシティ管理
+
+最大容量の管理　能力の範囲内に収まっている。常に管理する。
+
+### 可用性管理　可用性できるだけ動いていること
+
+- 可用性　稼働している割合
+- 信頼性　平均故障間隔
+- 保守性　回復する能力
+
+### IT サービス継続性管理
+
+災害発生時に対応する
+
+### IT サービス財務管理
 
 ## システム監査
+
 リスクを第三者の目で確認する
-  * 監査人　部門と独立した存在
-  * 証拠をもとにして監査する
-  * 計画　→　予備調査 →　本調査　→調書の作成　→報告書の作成→報告→フォロー
-  * 指示や作業に手を出せない。簡単なフォローのみ
+
+- 監査人　部門と独立した存在
+- 証拠をもとにして監査する
+- 計画　 → 　予備調査 → 　本調査　 → 調書の作成　 → 報告書の作成 → 報告 → フォロー
+- 指示や作業に手を出せない。簡単なフォローのみ
 
 ### リスト
+
 単方向リスト　次のポインターを覚えておく
 双方向リスト　前と次のポインターを覚えておく
 
 ### キュー
-到着した順に出ていく。待ち行列　ファーストインファーストアウト　FIFO
+
+到着した順に出ていく。待ち行列　ファーストインファーストアウト　 FIFO
+
 ### スタック
+
 最後に到着したものから出ていく ラストインファーストアウト
 途中で取り出すことでいろいろな取り出し方がある。
 
 ## ツリー構造
+
 親の下に子がいる
+
 ### ノード（節）
+
 一つ一つの要素のこと
+
 ### ルート（根）
+
 先頭の要素
+
 ### リーフ（葉）
+
 末尾の要素
+
 ### 枝
+
 ノードをつなぐ線
-### 2分木
+
+### 2 分木
+
 枝がに分岐以下
+
 #### 二分探索木
- 左　＜　自分　＜右　で設定する
+
+左　＜　自分　＜右　で設定する
 
 ## 探索ある誤ズム
- ### 線形探索
- 最初から一つずつ探していく
- 平均探索回数　（最小探索回数最 + 大検索回数）/2
- 探索時間は表全体の大きさにほぼ比例
 
- ### 二分探索
- 大きさ順に並んでいる
- 何中から調べる
- 平均探索回数　log2全体の個数
+### 線形探索
 
- ### ハッシュ法
+最初から一つずつ探していく
+平均探索回数　（最小探索回数最 + 大検索回数）/2
+探索時間は表全体の大きさにほぼ比例
+
+### 二分探索
+
+大きさ順に並んでいる
+何中から調べる
+平均探索回数　 log2 全体の個数
+
+### ハッシュ法
+
 シノニム衝突　かぶっていたら
-平均探索回数1
+平均探索回数 1
 関数地によって格納場所を決める
 
 ## 整列アルゴリズム
+
 ### バブルソート
+
 隣の自分の大きさと比較してみていく
 右側が一番大きい数値。だんだん見ていく回数が減っていく
+
 ### 選択ソート
+
 最小の値を探してみ整列の先頭()と交換
+
 ### 挿入ソート
+
 み整列のデータをすでに整列されているところに挿入していく
+
 ### シェルソート
+
 ある一定の間隔を決めて、入れ替えていく。一巡したら間隔を狭める
+
 ### クイックソート
+
 基準値を決めて大きいグループと小さいグループに分けて入れ替える。
 一巡したら、分けたグループ内で基準値を決めて入れ替える。
 今のところ一番早いといわれている
+
 ### マージソート
+
 始めは一つに分割し、次に隣のものとマージして結合して、その中で整列させる。
 次にまたマージして整列を繰り返す。
+
 ### ヒープソート
+
 ツリー形式で親が一番大きくて子が小さい。二分探索木と異なり、右が一番大きいではない。
 一巡すると葉から一個親にして、大きさを見て、を繰り返す。
 
 ## クラス
+
 設計図
+
 ### オブジェクト
+
 クラスを実体化したもの
+
 ### インスタンス
+
 クラスの定義に基づいてインスタンスが生成
+
 ### 属性
+
 情報
+
 ### メソッド
+
 操作　オブジェクトのふるまい
+
 ### geter seter
+
 データを挿入するとき取り出すときは直接アクセスするのではなくクラス内でアクセスするようにする。
 必ず一か所経由するようにする
+
 ### カプセル化
+
 オブジェクトの内部構造が変更されても利用者がその影響を受けない
-属性とメソッドを1つのオブジェクトとする
+属性とメソッドを 1 つのオブジェクトとする
+
 ### インヘリタンス（継承）
+
 共通化するものを一つにまとめる
+
 #### オーバーライド親クラスのものを上書する
+
 #### 基底クラス 親クラス
+
 ## ポリモーフィズム
+
 異なる型のオブジェクトが同じメソッドを持っていても、その振る舞いはオブジェクトの型によって変わります
+
 ## プログラミングについて
+
 ### リロケータブル(再配置可能)
+
 どこにおいても実行できる
+
 ### リエントラント　再入可能
+
 複数の呼び出し元から同時に呼ばれても問題ない
+
 ### リユーザブル 再使用可能
+
 一度ロードしたプログラムを再実行できる
 実行の初めに初期化し、終了したら初期状態にする
+
 ### リカーシブ 再帰
+
 自分を読んでもよい
 
+## 2 進数から 10 進数
 
-## 2進数から10進数
-桁に対して2の累乗にする 0のところは考慮しない　0始まり。
-1001 => 2^0 +　2^3
-小数は-乗　1/2 1/4 1/8
+桁に対して 2 の累乗にする 0 のところは考慮しない　 0 始まり。
+1001 => 2^0 +　 2^3
+小数は-乗　 1/2 1/4 1/8
+
 ### ビット
-1つのけたのこと
+
+1 つのけたのこと
+
 ### バイト
-8ビット
+
+8 ビット
+
 ### 桁
+
 ミーのマイクなのぴー
 小さい　ミリ　＞　マイクロ　＞　ナノ　＞　ピノ
 
 大きい　キロ　＜　メガ　＜　ギガ　＜テラ
 
-10進数から二進数　
+10 進数から二進数　
 下から読む
-余りを出していく。最後0になるまで行う
-しょう数点の時はかける2で上から読む
+余りを出していく。最後 0 になるまで行う
+しょう数点の時はかける 2 で上から読む
 無限小数も存在する
-16進数　10真から16進数は16で割って余りを見る
-　　　　小数は16をかける
-　　　　16進数から10進数は 1, 16 256 といった数値を10しんの数値で書ける
+16 進数　 10 真から 16 進数は 16 で割って余りを見る
+　　　　小数は 16 をかける
+　　　　 16 進数から 10 進数は 1, 16 256 といった数値を 10 しんの数値で書ける
 マイナス表記
-八ビットを反転させて1を足す
-反転させる　1の補数
-反転させて1を足す　2の補数
-マイナス扱うという問題なら先頭を見る　
-1. 先頭が1だったらマイナス表記。
+八ビットを反転させて 1 を足す
+反転させる　 1 の補数
+反転させて 1 を足す　 2 の補数
+マイナス扱うという問題なら先頭を見る
+
+1. 先頭が 1 だったらマイナス表記。
 2. の補数を引く。
-3.  反転
-  オール1はマイナスとする
+3. 反転
+   オール 1 はマイナスとする
 
 ### 算術シフト
-#### 左シフト　0を下に追加する
-マイナスの時　左の1はそのままで0繰り上げる
+
+#### 左シフト　 0 を下に追加する
+
+マイナスの時　左の 1 はそのままで 0 繰り上げる
+
 #### 右シフト
+
 最上位シフトのものを左に追加する
+
 #### オーバーフロー
+
 シフトした時に左のに文字が同じではない時発生
-#### 16進数のシフト演算
-10進数に直す　4ビットづつで二進数にする　シフト演算する
+
+#### 16 進数のシフト演算
+
+10 進数に直す　 4 ビットづつで二進数にする　シフト演算する
 
 ### 小数点
+
 #### 固定小数
-下位2ビットは小数として扱うといった感じで小数点を二進数であらわす。
+
+下位 2 ビットは小数として扱うといった感じで小数点を二進数であらわす。
+
 #### 浮動小数
+
 小数点の位置を好きに決められる
+
 ##### 正規化
-一番左端を0にするように10の何乗という形にする。正規化すると何乗形式になるとわかるので回ビットに指数を入れる。マイナスの場合は最上位ビットに1を入れる。
-f * r^e 
-f: 仮数　r: 基数　e: 指数
-最大と言ったら最上位ビットは0でそのほかはオール1を考える
+
+一番左端を 0 にするように 10 の何乗という形にする。正規化すると何乗形式になるとわかるので回ビットに指数を入れる。マイナスの場合は最上位ビットに 1 を入れる。
+f \* r^e
+f: 仮数　 r: 基数　 e: 指数
+最大と言ったら最上位ビットは 0 でそのほかはオール 1 を考える
+
 ## 誤差
+
 ### 丸め誤差
+
 四捨五入した時に発生する誤差
+
 ### 打切り誤差
+
 コンピューターがこれ以上計算しても意味ないと判断して発生
+
 ### 桁落ち
+
 近い数値の引き算
+
 ### 情報誤差
+
 絶対値が大きいほうに合わせる
+
 ### オーバーフロー
+
 最上位ビットがあふれて入らなくなる
+
 ### アンダーフロー
+
 指数部に入らなくなる
 
 ## 弁図
+
 ### 論理和
+
 後ろがカーブした図　足し算の記号
+
 ### 論理和の否定
+
 ### 論理積
+
 面積でかい図　掛け算の記号
+
 ### 論理積の否定
+
 ### 否定
+
 三角の図　上に棒線
+
 ### 排他的論理和
+
 論理和の共通している部分がなくなったもの
+
 ### 半加算器と全加算器
-半加算器はキャリー入力を持たず、2つのビットを加算するだけです。
-全加算器はキャリー入力を含む3つの入力を加算でき、次の桁へのキャリー出力も考慮しています。
+
+半加算器はキャリー入力を持たず、2 つのビットを加算するだけです。
+全加算器はキャリー入力を含む 3 つの入力を加算でき、次の桁へのキャリー出力も考慮しています。
 半加算器　排他的論理和と論理積を組み合わせる
 
 ### ビット操作
-不要なものにマスクをする。消したい部分を0にし欲しい部分は1として論理積を使う
-全ビット反転はオール1にすること→排他的論理和
+
+不要なものにマスクをする。消したい部分を 0 にし欲しい部分は 1 として論理積を使う
+全ビット反転はオール 1 にすること → 排他的論理和
 
 # パリティビット
-1のこと
 
-## コンピュータの5台装置
+1 のこと
+
+## コンピュータの 5 台装置
+
 ### CPU
+
 ##### クロック
-CPUが作動し振動すること
+
+CPU が作動し振動すること
+
 ##### クロック周波数
-1秒間でどれくらい振動して命令
-Ｈｚが単位。GHzが使われる。→10億Hz
-##### MIPS　ミップス
-100万回を1命令とした単位
+
+1 秒間でどれくらい振動して命令
+Ｈｚが単位。GHz が使われる。→10 億 Hz
+
+##### MIPS 　ミップス
+
+100 万回を 1 命令とした単位
+
 ##### クロックサイクル時間
-1クロック当たりの時間。　1秒/ クロック
+
+1 クロック当たりの時間。　 1 秒/ クロック
+
 ##### 命令ミックス
-複数の処理によりCPUの処理能力を計測する
+
+複数の処理により CPU の処理能力を計測する
+
 ##### 高速化
-* パイプライン
+
+- パイプライン
   他の処理が停止しないように、他の処理実行中に別の子とする
-* スーパーパイプライン
+- スーパーパイプライン
   パイプラインを細分化して高速化を図る
-* スーパースカラ
-   複数のパイプラインを用いて同時に複数の命令を実行。
+- スーパースカラ
+  複数のパイプラインを用いて同時に複数の命令を実行。
+
 #### 制御装置　
-* 制御の流れ
+
+- 制御の流れ
+
 1. 命令を取り出す（フェチ）　主記憶装置から。
 2. 命令をでコードする
 3. オペランドを呼び出す
 4. 目令する
-* プログラムカウンタ
-  アドレスを記憶しておく
-##### レジスタ
-* 汎用レジスタ　いろいろ保存
-* 命令レジスタ　命令を取得保存
-* 命令デコーダー　解読
-* プログラムカウンタ　次の命令のアドレス保存
-* アキュムレータ　演算系の保存
 
-* 即値アドレス指定方式　そのまま使う
-* 直接アドレス指定方式(絶対アドレス方式)　そのままから指定
-* 関節指指定方式　直接アドレス指定の値がアドレス
-* ベースアドレス指定方式　再配置されている　変位がキーワード
-* インデックス指定方式（指標アドレス）　添え字で隣り合っている
+- プログラムカウンタ
+  アドレスを記憶しておく
+
+##### レジスタ
+
+- 汎用レジスタ　いろいろ保存
+- 命令レジスタ　命令を取得保存
+- 命令デコーダー　解読
+- プログラムカウンタ　次の命令のアドレス保存
+- アキュムレータ　演算系の保存
+
+- 即値アドレス指定方式　そのまま使う
+- 直接アドレス指定方式(絶対アドレス方式)　そのままから指定
+- 関節指指定方式　直接アドレス指定の値がアドレス
+- ベースアドレス指定方式　再配置されている　変位がキーワード
+- インデックス指定方式（指標アドレス）　添え字で隣り合っている
+
 #### 演算装置
+
 計算する
-### 入力装置
-キーボードとか。データは記憶装置に流す
+
 ### 記憶装置
+
 命令が取り出される。
+
 #### 主記憶装置
+
 メインメモリ　コンピュータに搭載されている
+
+##### DRAM
+
+遅いが大容量。リフレッシュ（電気を定期的に流す）をしないと消える。揮発性あり。
+アドレスで記憶している。コンデンサの電荷の有無で記憶する。
+メモリセル構造が単純
+
+##### メモリインターリーブ
+
+連続したデータを仮想的に分けて並列で読み込んでいく。複数のバンクにアクセスする。`バンク`はデータ転送を高速化する複数のメモリ領域。
+
+#### ガベージコレクション メモリコンパクション
+
+使用しなくなったメモリ領域を詰めて埋める。メモリを使用しなくなって隙間が空いている状態を`フラグメンテーション`と呼ぶ。ある程度フラグメンテーションが発生してからガベージコレクションを行う。
+
+##### フラグメンテーション
+
+可変長の時に発生する。十分な空きメモリがあるが隙間が空いている。
+
+##### SRAM
+
+早いが小さく高価。キャッシュメモリを使用して、DRAM でよくアクセスするものを一時的に保持する。書き込みは二種類ある。 `ライトスルー` キャッシュメモリと DRAM 両方に同時に書き込む。遅いが一貫性（コヒーレンシ）が保たれる。`ライトバック`キャッシュメモリだけに最初にっ書き込む。早いが一貫性は保たれない。`フリップフロップ回路`で記憶
+
+##### 仮想記憶
+
+物理メモリよりも大来なメモリが使える。データは固定長。仮想アドレス空間と物理メモリを対応する`ページ`がある。cpu は仮想メモリをはじめに見て、対応しているページを見に行く。ページにないと、物理メモリのデータで以下の条件でデータを補助記憶装置に追いやって（`ページアウト`）物理メモリに置く（`ページイン`）。そのあとページを更新する（`ページフォールト`）
+ページアウトの方式
+`FIFO`　最初に追加されたやつ
+`LIFO`　最後に追加されたやつ
+`LRU` 長い間参照されていないやつ
+`LFU` 参照頻度が少ないやつ
+
 #### 補助記憶装置
+
 ハードディスクなど外部のメモリ
+ハードディスクの構成
+
+- セクター　一つの枠。512 バイト
+- トラック　セクター 1 週分
+- シリンダ　トラックを複数まい重ねたもの。効率的に読むためトラック複数。
+- アクセス時間 = シーク時間　＋　サーチ時間　＋　データ転送時間
+- シーク時間　ヘッドが目的のトラックに移動する時間
+- サーチ時間　目的のデータがあるところに回転する時間　平均サーチ時間がよく使われる
+- データ転送時間　目的の箇所について読み取るのにかかる時間
+- SSD 補助記憶装置の一つ。ディスクではなくフラッシュメモリが存在する。値段が高い。機械的な可動部がない。消費電力を抑えられる。
+
+###### ROM
+
+不揮発性の記憶装置。電源落としても消えない。
+MROM マスク ROM 　出荷後書き換えできない
+EPROM 紫外線でデータの消去可能
+EEROP 電気信号でビット単位で消去可能。USB カードとかに使われるフラッシュメモリがある 512KB 単位で削除できる
+
+### 入力装置
+
+キーボードとか。データは記憶装置に流す
+タッチパネル　静電容量方式　電界があり表面の電荷の変化でとらえる
+OCR 　文字とか読み込むやつ
+OMR マークシート読み込む装置
+ポインティングシステム　場所を読み込む
+
 #### 出力装置
-ディスプレイとか
+
+ディスプレイ
+LCD(液晶）　シャボン玉のように液体と固体の間のものに光当てることで色を再現　光の透過を画素ごとに制御から―フェイルター使う
+プラズマディスプレイ　放電
+CRT 　電子銃
+LED
+プリンター　
+ドットインパクトプリンタ　圧力加える　
+インクジェット　インクを吹き付ける　家庭用
+レーザープリンタ　熱　絵として印刷していく
+印刷機で使われる単位
+
+- dpi 1 インチ当たりのドット数
+- cps 一秒あたりの印刷文字数
+- ppm 1 分当たりの印刷数
+
+## オペレーティングシステム
+
+#### タスク管理
+
+ディスパッチャが CPU 仕様の許可を上げる（ディスパッチ）
+プリエンプション　実行件奪われる
+タイムクオンタム　許可が時間によって取り上げられる
+タスクスケジューリング
+
+- 到着順
+- 処理時間順
+- 優先順位
+- ラウンドロビン　すべてに同じタイムクオンタムを与える
+
+## 割り込み
+
+### 外部割込み
+
+- 入出力割込み　動作完了中断
+- タイマー割込み　時間経過で発生
+- コンソール割込み　プログラム実行中に割り込む
+- 機会チェック割込み　障害児に発生
+
+### 内部割込み
+
+- プロブラム割り込み　 0 割る、プログラムが原因で発生
+- SVC スーパーバイザー割り込み　ハードウェアを実行するときに発生
+- ページフォールト
+
+#### スプーリング
+
+cpu からデータを送るのではなくいったんハードディスクに保存する
+保存後は必要なデータを送る（スループット）ので処理できる仕事量が増える
+
+## 信頼性
+
+###　デュアルシステム　
+コンピュータを 2 系統用意し同じ処理をさせてサーバーに保存する。定期的に照合する必要があるコストがかかる。
+
+### デュプレックスシステム
+
+主系と待機系があり、主系が止まったとき待機系を起動する。
+ホットスタンバイ　常に待機系が起動状態で待機
+コールドスタンバイ　待機系は電源切られている状態で主系が止まってから起動される
+
+### RAID
+
+ハードディスクに信頼性をもって保存する話し。
+
+- RAID 0 ストライピング　内容を交互に書いていく
+- RAID 1 ミラーリング　同じ内容を移す　信頼性上がる
+- RAID 5 パリティをブロック単位で管理。ビット単位の話。0 1 で管理し偶数になるように帳尻を合わせる（パリティビット）
+
+### フォールトアボイダンス
+
+故障をゼロにする
+
+### フォールトトレラント
+
+故障しても被害を抑える
+
+### フォールソフト
+
+故障しても最低限動く
+
+### フェールセーフ
+
+故障したら安全な法にする
+
+### フールプルーフ
+
+誤操作しても誤動作しない
+
+### RASIS
+
+- 信頼性
+  故障せずに可動　
+  MTBF 　稼働している時間を全部足して、故障した回数で割る
+- 可用性
+  稼働時間が長いか
+  稼働率　稼働している時間/ （全体の稼働時間） 全体の稼働時間 MTBF + MTTR
+  直列の稼働率（両方とも稼働）
+  正方形の一か所
+  並列の稼働率　（どちらかが稼働）
+  正方形で含まない面積
+- 保守性
+  修復性　 MTTR 修復時間が短いほど良い
+- 保全性
+  データの安全性が保たれている
+- 安全性
+  不正利用に対して適切か
+
+## データベース
+
+データベースの種類
+階層、ネットワーク、sql
+
+sql oracle、mysql、Microsoft、postgresql
+
+- 主キー　一意になるように設定
+- 補助キー　主キーの候補を設定
+- 外部キー　別の参照先のキーを参照元に持ってくる
+
+### 関数従属
+
+ある値が決まると他の値が決まること。主キーとか
+
+### 正規化　
+
+データを変更した時に矛盾が出ないようにする設計
+関数従属で切り離す。つながっていないものをくっつける。
+
+### 選択
+
+特定の行を取り出す操作 SELECT \* FROM Tablename WHERE 条件
+WHERE は集約関数の前に処理される 集約関数（SUM, COUNT など）
+
+### 射影
+
+列を取り出す。　 SLECT 取り出したい行 FROM 　 Tablename WHERE
+複数区切るときはカンマ　 AS で別名をつけることができる
+
+### 結合
+
+横につなげる。INNER JOIN を使用 INNER JOIN つなげたいテーブル ON 同じ値 = 同じ値
+
+### 整列
+
+ORDER BY 並べたい値 DESC
+DESC は降順
+未設定または ASC は昇順
+
+### グループ化
+
+SELECT 句に含まれる列が GROUP BY に含まれていない時エラー
+GROUP BY 列名
+グループ化した後に条件を書くときは HAVING を使用する。 グループ化の前だと WHERE は使える。
+集約関数は GROUP BY で使う
+
+### 副問い合わせ
+
+WHERE 句の中に SQL 文を入れる IN それが含まれるもの、 EXISTS 存在するもの
+
+### ビュー
+特定の項目でテーブルを仮想的に作って保存する。特定の項目以外を隠せるのでセキュリティが向上する。実行するたびにSQLを実行する。`導出表`
+CREATE VIEW VIEWNAME AS SELECT ....
+
+### 追加
+INSERT INTO テーブル名 (列の名前) VALUES (1,2,3...)
+VALUESの代わりにSELECT文も使える
+全部入れるときは(列の名前)は省略できる
+### 更新
+UPDATE TableNAme SET 更新したい値 = "Name" WHERE 条件
+WHEREがないと全部更新される
+
+### 削除
+DELETE FROM TableName WHERE 条件
